# pyconit25-future-climate-change

./: .gitignore  README.md  common.py  pyproject.toml  screenshot.md  ssp_variables.ipynb  temperature.ipynb
code_screenshot/: screenshot.md
presentation/: Data_format.excalidraw  screenshot.md
